# HomeKeeper-backend

./: .coveragerc  .flake8  Dockerfile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  mypy.ini  pyproject.toml  requirements.txt  schema.graphql
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-app.yml
common/: models.py  schema.py
common/management/commands/: dumpschema.py
common/tests/: factories.py
homekeeper/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
homekeeper/tests/: test_jwt_auth.py
homekeeper/users/: schema.py
tasks/: __init__.py  admin.py  app.py  forms.py  models.py  scalars.py  schema.py  serializers.py  signals.py
tasks/migrations/: 0001_initial.py  0002_auto_20201230_0417.py  0002_auto_20210516_1940.py  0003_alter_task_description.py  0003_alter_task_id.py  0004_auto_20210504_2238.py  0004_taskinstance_completed.py  0005_taskinstancecompletion_points_granted.py  0006_auto_20210724_2330.py
tasks/tests/: test_api.py  test_unit.py
teams/: forms.py  models.py  schema.py
teams/migrations/: 0001_initial.py  0002_auto_20201230_0417.py  0003_alter_team_id.py  0004_team_password.py  0005_alter_team_name.py  0006_auto_20210425_0029.py  0007_alter_team_name.py  0008_auto_20210724_2330.py
teams/tests/: tests.py  tests_api.py  tests_unit.py
users/: __init__.py  app.py  forms.py  models.py  schema.py  signals.py  tests.py
users/migrations/: 0001_initial.py
users/tests/: queries.py  test_api.py  test_unit.py  tests.py
