[tool.poetry]
authors = ["Mariusz Bielecki <mariuszbielecki01@gmail.com>"]
description = "A Django backend for HomeKeeper"
name = "homekeeper"
packages = [
  {include = "homekeeper"},
  {include = "users"},
  {include = "teams"},
  {include = "tasks"},
  {include = "common"},
]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.9"

django = "^4.2.5"
django-filter = "22.1"
django-graphql-jwt = "^0.3.4"
django-stubs = "^4.2.0"
djangorestframework = "^3.13.1"
graphene = "^3.2.2"
graphene-django = "^3.0.0"
graphene-django-extras = "^1.0.0"
psycopg2-binary = "^2.9.6"

# Deployment
dj-database-url = "^2.0.0"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"

[tool.poetry.dev-dependencies]
coverage = "*"
factory-boy = "*"
faker = "*"
graphene-stubs = "*"
mypy = "*"
parameterized = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
