[tool.poetry]
authors = ["Mariusz Bielecki <mariuszbielecki01@gmail.com>"]
description = "A Django backend for HomeKeeper"
name = "homekeeper"
packages = [
  {include = "homekeeper"},
  {include = "users"},
  {include = "teams"},
  {include = "tasks"},
  {include = "common"},
]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.12"

django = "^5.1.1"
django-filter = "22.1"
django-graphql-jwt = "^0.4.0"
django-stubs = "^5.1.1"
djangorestframework = "^3.13.1"
graphene = "^3.3"
graphene-django = "^3.2.2"
graphene-django-extras = "^1.0.0"
psycopg2-binary = "^2.9.9"

# Deployment
dj-database-url = "^2.1.0"
gunicorn = "^23.0.0"
typing_extensions = "^4.11.0"
whitenoise = "^6.7.0"

[tool.poetry.dev-dependencies]
coverage = "*"
factory-boy = "*"
faker = "*"
graphene-stubs = "*"
mypy = "*"
parameterized = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
